Moving to a final folder structre that makes a bit more sense.

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,8 @@ licenseURL = "https://creativecommons.org/licenses/by-sa/4.0"
 
 themeColor = "#FF1A87"
 
+enableRobotsTXT = true
+
 customCss = ["css/custom.css"]
 
   ## Set as many as you want.
