--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # General Site Settings
 title: Ampersand Softworks
 logo: # You can add own logo. For example '/images/logo.png'.
-description: Your friendly neighbourhood development blogs for Apple branded pocket computers.
+description: Your friendly neighbourhood development blog about Apple branded pocket computer development.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ampersandsoftworks.com" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -17,7 +17,6 @@ social:
 - {icon: "logo-mastodon", label: Mastodon, link: "https://hachyderm.io/@bretto"}
 - {icon: "logo-linkedin", label: LinkedIn, link: "https://www.linkedin.com/in/brettohland/"}
 - {icon: "logo-github", label: GitHub, link: "https://github.com/brettohland"}
-- {icon: "logo-twitter", label: Twitter, link: "https://twitter.com/bretto"}
 
 # Example of adding a new link to the author section and footer - {icon: "ion-logo-github", label: Github, link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
